[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2.1",
    "robotpy-native-wpilib==2027.0.0a4",
]

[project]
name = "robotpy-native-xrp"
version = "2027.0.0a4"
description = "WPILib XRP vendor library"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpilib==2027.0.0a4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "xrpVendordep-cpp"
group_id = "org.wpilib.xrpVendordep"
repo_url = "https://frcmaven.wpi.edu/artifactory/release-2027"
version = "2027.0.0-alpha-4"

extract_to = "src/native/xrp"
libs = ["xrpVendordep"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/xrp/robotpy-native-xrp.pc"
name = "xrp"

includedir = "src/native/xrp/include"
libdir = "src/native/xrp/lib"
shared_libraries = ["xrpVendordep"]
requires = ["robotpy-native-wpilib"]
