[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap", "hatch-meson", "hatch-vcs", "hatchling",
    "native.romi==2025.3.2",
    "wpilib~=2025.3.2",
]


[project]
name = "robotpy-romi"
dynamic = ["version"]
description = "Binary wrapper for WPILib Romi Vendor library"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
install_requires = [
    "wpilib~=2025.3.2"
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"

[tool.hatch.version]
source = "vcs"
raw-options.root = "../.."

[tool.hatch.build.hooks.vcs]
version-file = "romi/version.py"


[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
[tool.semiwrap.extension_modules."romi._romi"]
name = "romi"
wraps = ["native.romi"]
depends = [
    "wpilib", "wpimath_geometry"
]

[tool.semiwrap.extension_modules."romi._romi".headers]
# frc/romi
OnBoardIO = "frc/romi/OnBoardIO.h"
RomiGyro = "frc/romi/RomiGyro.h"
RomiMotor = "frc/romi/RomiMotor.h"
