[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap~=0.3.0",
    "hatch-meson~=0.1.0",
    "hatch-robotpy~=0.2.0",
    "hatchling",
    "robotpy-native-romi==2026.2.1",
    "wpilib==2026.2.1",
]


[project]
name = "robotpy-romi"
version = "2026.2.1"
description = "Binary wrapper for WPILib Romi Vendor library"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-native-romi==2026.2.1",
    "wpilib==2026.2.1",
    "robotpy-halsim-ws==2026.2.1",
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"

[project.entry-points."robotpy_cli.2026"]
run-romi = "romi.cli:RunRomi"


[tool.hatch.build.hooks.robotpy]
version_file = "romi/version.py"

[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]

[tool.hatch.build.targets.wheel]
packages = ["romi"]


[tool.semiwrap]
update_init = ["romi"]

[tool.semiwrap.extension_modules."romi._romi"]
name = "romi"
wraps = ["robotpy-native-romi"]
depends = [
    "wpilib", "wpimath_geometry"
]

[tool.semiwrap.extension_modules."romi._romi".headers]
# frc/romi
OnBoardIO = "frc/romi/OnBoardIO.h"
RomiGyro = "frc/romi/RomiGyro.h"
RomiMotor = "frc/romi/RomiMotor.h"
